--- a/idiom_core/Cargo.toml
+++ b/idiom_core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "idiom"
+name = "idiom_core"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,5 +7,3 @@ edition = "2021"
 
 [dependencies]
 thiserror = "1.0"
-idiom_core = { path = "idiom_core" }
-tests = { path = "tests" }
