--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "idiom"
+name = "tests"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0"
-idiom_core = { path = "idiom_core" }
-tests = { path = "tests" }
+idiom_core = { path = "../idiom_core" }
